assets moved out of public paste

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "@lib/*": ["./src/lib/*"],
       "@pages/*": ["./src/pages/*"],
       "@screens/*": ["./src/screens/*"],
-      "@public/*": ["./public/*"]
+      "@assets/*": ["./src/assets/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
